kubernetes/media/deprecated_jackett/06-svc-jackett.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9117
  selector:
    app: jackett
