kubernetes/media/deprecated_jackett/10-ingress-jackett.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jackett
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jackett.khazadlab.es`)
      kind: Rule
      middlewares:
        - name: default-headers-media   
          namespace: media              
      services:
        - name: jackett
          port: 80
  tls:
    secretName: tls-khazadlab-wildcard
